# generation

./: .gitignore  .gitigonore  README.md  pyproject.toml
diffusion model/: noising.ipynb  noising.py  test.py
vae/: Untitled-1.ipynb  vae.py
variational autoencoder/: example.py
variational autoencoder/network/: __init__.py  base_model.py  cnn_vae.py  ff_vae.py
