[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["nopeNoshishi <noah.of.havegreat@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
